@@ -2,6 +2,10 @@ ChangeLog for Pylint
 ====================
 
 --
+    * New --msg-template option to control output, deprecating "msvc" and
+      "parseable" output formats as well as killing `--include-ids` and `--symbols`
+      options
+
     * Do not emit [fixme] for every line if the config value 'notes'
       is empty, but [fixme] is enabled.
 
